Changes
=======

All issue numbers are relative to https://github.com/Toblerity/Fiona/issues.

1.10.0rc1 (2024-08-13)
----------------------

This is the first release candidate for 1.10.0.

Changes:

- The setup.cfg duplicates project configuration in pyproject.toml and has been
  removed.

1.10b3 (2024-07-29)
-------------------

Bug fixes:

- The sketchy, semi-private Python opener interfaces of version 1.10b2 have
  been replaced by ABCs that are exported from fiona.abc (#1415).
- The truncate VSI plugin callback has been implemented (#1413).

1.10b2 (2024-07-10)
-------------------

Bug fixes:

- The Pyopener registry and VSI plugin have been rewritten to avoid filename
  conflicts and to be compatible with multithreading. Now, a new plugin handler
  is registered for each instance of using an opener (#1408). Before GDAL 3.9.0
  plugin handlers cannot not be removed and so it may be observed that the size
  of the Pyopener registry grows during the execution of a program.
- A CSLConstList ctypedef has been added and is used where appropriate (#1404).
- Fiona model objects have a informative, printable representation again
  (#1380).

Packaging:

- PyPI wheels include GDAL 3.9.1 and curl 8.8.0.

1.10b1 (2024-04-16)
-------------------

Bug fixes:

- Fiona can again set fields with values that are instances of classes derived
  from date, time, and datetime (#1377).  This was broken by changes in 1.10a2.

1.10a2 (2024-04-05)
-------------------

Deprecations:

- The FIELD_TYPES, FIELD_TYPES_MAP, and FIELD_TYPES_MAP_REV attributes of
  fiona.schema are no longer used by the project and will be removed in version
  2.0 (#1366).
- The Python style of rio-filter expressions introduced in version 1.0 are
  deprecated. Only the parenthesized list type of expression will be supported
  by version 2.0.

New features:

- All supported Fiona field types are now represented by classes in
  fiona.schema. These classes are mapped in FIELD_TYPES_MAP2 and